added meta tags

--- a/src/view/app.html
+++ b/src/view/app.html
@@ -1,10 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://www.facebook.com/2008/fbml" xmlns:og="http://ogp.me/ns#">
   <head>
     <meta charset="utf-8">
+    <meta name="robots" content="noodp" />
+	<meta name="robots" content="noydir" />
+	<meta name="Description" content="submit your resume to apply for jobs online." />
+	<meta name="Keywords" content="local jobs, local job search, local job listings, find local jobs, career" />
+	<meta http-equiv="Content-Style-Type" content="text/css" />
+	<meta http-equiv="Content-Script-Type" content="text/javascript"/>
+	<meta property="fb:page_id" content="page_id will go here" />		
+	
     <title>Resume Retard - an Erlang Job Bank</title>
   </head>
+  
   <body>
+	  <div id="site-header">
+	 </div>
+	 
     {% block content %}{% endblock %}
+    
+  <footer>
+	  <div class="site-links">
+			<ul>
+				<li><a href="*">site map</a></li>
+				<li><a href="*">privacy</a></li>
+				<li><a href="*">terms</a></li>
+				<li><a href="*">help</a></li>
+			</ul>
+		</div>
+		<p class="copyright">
+Copyright &copy;2014 Jason Clark. All rights reserved.
+<img width="24" height="15" valign="bottom" src=""></p>
+  </footer>
+  
   </body>
 </html>
