--- a/src/view/app.html
+++ b/src/view/app.html
@@ -9,12 +9,15 @@
 	<meta http-equiv="Content-Style-Type" content="text/css" />
 	<meta http-equiv="Content-Script-Type" content="text/javascript"/>
 	<meta property="fb:page_id" content="page_id will go here" />		
-	
+	<link href="/static/css/app.css" media="all" rel="stylesheet" type="text/css"/>
     <title>Resume Retard - an Erlang Job Bank</title>
   </head>
   
   <body>
 	  <div id="site-header">
+		  	<a href="https://github.com/mithereal/resumeretard">
+	<img width="60" height="45" src="/static/sitelogo.png">
+	</a>
 	 </div>
 	 
     {% block content %}{% endblock %}
@@ -27,10 +30,15 @@
 				<li><a href="*">terms</a></li>
 				<li><a href="*">help</a></li>
 			</ul>
-		</div>
-		<p class="copyright">
-Copyright &copy;2014 Jason Clark. All rights reserved.
-<img width="24" height="15" valign="bottom" src=""></p>
+	</div>
+	
+	<p class="copyright">
+	Copyright &copy;2014 Jason Clark. All rights reserved.
+	<a href="https://github.com/mithereal/resumeretard">
+	<img width="24" height="15" valign="bottom" src="/static/sitelogo.png">
+	</a>
+	</p>
+
   </footer>
   
   </body>
