--- a/src/view/app.html
+++ b/src/view/app.html
@@ -11,6 +11,13 @@
 	<meta property="fb:page_id" content="page_id will go here" />		
 	<link href="/static/css/app.css" media="all" rel="stylesheet" type="text/css"/>
     <title>Resume Retard - an Erlang Job Bank</title>
+    <!--[if gte IE 9]>
+  <style type="text/css">
+    .gradient {
+       filter: none;
+    }
+  </style>
+<![endif]-->
   </head>
   
   <body>
@@ -33,10 +40,10 @@
   <footer>
 	  <div class="site-links">
 			<ul>
-				<li><a href="*">site map</a></li>
-				<li><a href="*">privacy</a></li>
-				<li><a href="*">terms</a></li>
-				<li><a href="*">help</a></li>
+				<li><a href="sitemap">site map</a></li>
+				<li><a href="privacy">privacy</a></li>
+				<li><a href="terms">terms</a></li>
+				<li><a href="help">help</a></li>
 			</ul>
 	</div>
 	
