worked on layout

--- a/priv/static/css/app.css
+++ b/priv/static/css/app.css
@@ -1,11 +1,19 @@
+body{ 
+background-color:#000F2D;
+}
+footer{
+	position:absolute;
+	bottom:0px;
+	width:100%;
+}
 .site-links {
-    border-top: 1px solid #CCCCCC;
-    
-    margin: auto;
-    padding-top: 10px;
+border: 2px solid #800000;
+margin: auto;
+padding-top: 10px;
 }
 .site-links li {
-    display: inline;
+border: 2px solid #800000;
+display: inline;
 }
 #site-header{
 border-bottom: 1px solid #CCCCCC;
@@ -17,20 +25,37 @@ margin-bottom:2px;
 	right: 10px;
 	top:10px;
 }
+.header-links{
+	position:absolute; 
+	left: 10em;
+	top:10px;
+	display:inline-block;
+	list-style-type: none;
+}
+.header-link{
+border-radius: 8px; 
+-moz-border-radius: 8px; 
+-webkit-border-radius: 8px; 
+text-align:center;
+
+	position:relative; 
+	margin:auto;
+	height:140px;
+	width:240px;
+	display:inline-block;
+	list-style-type: none;
+	background-color:#2855A2;
+}
+.header-link a{
+text-decoration: none;
+font-size:150%;
+color:#FFFFFF;
+}
 #content-wrapper{
 	position:absolute;
 	min-width:100%;
 	min-height:80%;
-	background-color:#BFBFBF;
-}
-footer{
-
-	position:absolute;
-	bottom:0px;
-	width:100%;
-}
-body{ 
-background-color:#000000;
+	background-color:#2855A2;
 }
 .copyright{
 color:#FF0000;
