--- a/src/view/app.html
+++ b/src/view/app.html
@@ -7,31 +7,31 @@
 	<meta name="Description" content="submit your resume to apply for jobs online." />
 	<meta name="Keywords" content="local jobs, local job search, local job listings, find local jobs, career" />
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+	
 	<meta http-equiv="Content-Style-Type" content="text/css" />
 	<meta http-equiv="Content-Script-Type" content="text/javascript"/>
-	<meta property="fb:page_id" content="page_id will go here" />		
-	<link href="/static/css/ionic.css" rel="stylesheet">
-	<link href="/static/css/app.css" media="all" rel="stylesheet" type="text/css"/>	
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>
-
-    <script src="/static/js/app.js"></script>
-    <script src="/static/js/controllers.js"></script>
-    <script src="/static/js/directives.js"></script>
 	
-
-    <title>Resume Retard - an Erlang Job Bank</title>
-    <!--[if gte IE 9]>
-  <style type="text/css">
+	<meta property="fb:page_id" content="page_id will go here" />
+			
+	<link media="all" rel="stylesheet" type="text/css" href="/static/css/app.css" />
+	<!--[if gte IE 9]>
+    <style type="text/css">
     .gradient {
        filter: none;
-    }
-  </style>
-<![endif]-->
+       }
+    </style>
+    <![endif]-->	
+	
+	
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js" type="text/javascript"></script>
+   
+	
+    <title>Resume Retard - an Erlang Job Bank</title>
+
   </head>
   
-  <body ng-app="starter" animation="slide-left-right-ios7">
-	  <div id="site-header">
+  <body ng-app="resumeretard" ng-strict-di>
+	  <div id="site-header" ng-controller="resumeretardHeaderController">
 		  	<a href="https://github.com/mithereal/resumeretard">
 			<img width="60" height="45" src="/static/sitelogo.png">
 			</a>
@@ -71,6 +71,8 @@
 	</p>
 
   </footer>
-  
+   <script src="/static/js/app.js"></script>
+   <script src="/static/js/controllers.js"></script>
+   <script src="/static/js/directives.js"></script>
   </body>
 </html>
