css login buttons

--- a/src/view/app.html
+++ b/src/view/app.html
@@ -36,8 +36,8 @@
 			<img width="60" height="45" src="/static/sitelogo.png">
 			</a>
 			<div id="header-account">
-				<button id="login-button" value="login" type="button"> Login </button>
-				<button id="login-button" value="register" type="button"> Sign-Up </button>
+				<button id="login-button" class="hdrbtn" value="login" type="button"> Login </button>
+				<button id="register-button" class="hdrbtn" value="register" type="button"> Sign-Up </button>
 				
 			</div>
 			  <div class="header-links">
