--- a/priv/static/css/app.css
+++ b/priv/static/css/app.css
@@ -65,3 +65,25 @@ color:#FF0000;
 	bottom:0ex; 
 	right: 15px;
 }
+
+.hdrbtn{
+border:1px solid #f2b400; -webkit-border-radius: 3px; -moz-border-radius: 3px;border-radius: 3px;font-size:12px;font-family:arial, helvetica, sans-serif; padding: 10px 10px 10px 10px; text-decoration:none; display:inline-block;text-shadow: -1px -1px 0 rgba(0,0,0,0.3);font-weight:bold; color: #FFFFFF;
+ background-color: #FFC92B; background-image: -webkit-gradient(linear, left top, left bottom, from(#FFC92B), to(#AD9D68));
+ background-image: -webkit-linear-gradient(top, #FFC92B, #AD9D68);
+ background-image: -moz-linear-gradient(top, #FFC92B, #AD9D68);
+ background-image: -ms-linear-gradient(top, #FFC92B, #AD9D68);
+ background-image: -o-linear-gradient(top, #FFC92B, #AD9D68);
+ background-image: linear-gradient(to bottom, #FFC92B, #AD9D68);
+ filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#FFC92B, endColorstr=#AD9D68);
+}
+
+.hdrbtn:hover{
+ border:1px solid #c49200;
+ background-color: #FFD65E; background-image: -webkit-gradient(linear, left top, left bottom, from(#FFD65E), to(#E62E2E));
+ background-image: -webkit-linear-gradient(top, #FFD65E, #E62E2E);
+ background-image: -moz-linear-gradient(top, #FFD65E, #E62E2E);
+ background-image: -ms-linear-gradient(top, #FFD65E, #E62E2E);
+ background-image: -o-linear-gradient(top, #FFD65E, #E62E2E);
+ background-image: linear-gradient(to bottom, #FFD65E, #E62E2E);
+ filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#FFD65E, endColorstr=#E62E2E);
+}
