added find employee

--- a/src/view/app.html
+++ b/src/view/app.html
@@ -43,6 +43,7 @@
 			  <div class="header-links">
 			<ul>
 				<li class="header-link"><a href="jobpost">Post a Job</a></li>
+				<li class="header-link"><a href="employeesearch">Find a Employee</a></li>
 				<li class="header-link"><a href="jobsearch">Find a Job</a></li>
 			</ul>
 			
