changed tab text

--- a/src/view/app.html
+++ b/src/view/app.html
@@ -42,9 +42,10 @@
 			</div>
 			  <div class="header-links">
 			<ul>
-				<li class="header-link"><a href="jobpost">Post a Job</a></li>
-				<li class="header-link"><a href="employeesearch">Find a Employee</a></li>
-				<li class="header-link"><a href="jobsearch">Find a Job</a></li>
+				<li class="header-link selected"><a href="/search/jobs">Search / $</a></li>
+				<li class="header-link"><a href="/recruit/">Post em Job</a></li>
+				<li class="header-link"><a href="/search/resumes">Find der Werker</a></li>
+				
 			</ul>
 			
 	 </div>
