--- a/priv/static/css/app.css
+++ b/priv/static/css/app.css
@@ -87,3 +87,6 @@ border:1px solid #f2b400; -webkit-border-radius: 3px; -moz-border-radius: 3px;bo
  background-image: linear-gradient(to bottom, #FFD65E, #E62E2E);
  filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#FFD65E, endColorstr=#E62E2E);
 }
+.selected{
+	background-color:#2FB62F;
+}
