--- a/src/view/app.html
+++ b/src/view/app.html
@@ -32,9 +32,11 @@
   
   <body ng-app="resumeretard" ng-strict-di>
 	  <div id="site-header" ng-controller="resumeretardHeaderController">
+		  <div id="sitelogo">
 		  	<a href="https://github.com/mithereal/resumeretard">
-			<img width="60" height="45" src="/static/sitelogo.png">
+			<img src="/static/sitelogo.png">
 			</a>
+			</div>
 			<div id="header-account">
 				<button id="login-button" class="hdrbtn" value="login" type="button"> Login </button>
 				<button id="register-button" class="hdrbtn" value="register" type="button"> Sign-Up </button>
