--- a/src/view/application/version.html
+++ b/src/view/application/version.html
@@ -1,9 +1,15 @@
 {% extends "app.html" %}
 {% block content %}
+<div id="versioninfo">
 <div id="version">
+	<a href="https://github.com/mithereal/resumeretard">
+			Resume Retard
+			</a>
+<br>
 Version: {{ version }}
 </div>
 <div id="author">
-Author: Jason Clark
+Author: Jason Clark (<a href="HTTP://mithereal.github.io">mithereal.github.io</a>)
+</div>
 </div>
 {% endblock %}
