--- a/src/view/app.html
+++ b/src/view/app.html
@@ -62,10 +62,10 @@
   <footer>
 	  <div class="site-links">
 			<ul>
-				<li><a href="sitemap">site map</a></li>
-				<li><a href="privacy">privacy</a></li>
-				<li><a href="terms">terms</a></li>
-				<li><a href="help">help</a></li>
+				<li><a href="/sitemap">site map</a></li>
+				<li><a href="/information/privacy">privacy</a></li>
+				<li><a href="/information/terms">terms</a></li>
+				<li><a href="/information/help">help</a></li>
 			</ul>
 	</div>
 	
