--- a/src/view/registeration/index.html
+++ b/src/view/registeration/index.html
@@ -3,5 +3,6 @@
 <div class="error">
  {{ message }}
 </div>
-signup contents
+<div cladd="pagename"> {{ pagename }} </div>
+<div class ="registerationblock"></div>
 {% endblock %}
