flesh out signup page

--- a/src/view/app.html
+++ b/src/view/app.html
@@ -35,7 +35,7 @@
 	  <div id="site-header" ng-controller="resumeretardHeaderController">
 		  <div id="sitelogo">
 		  	<a href="/">
-			<img src="/static/sitelogo.png">
+			<img src="/static/image/sitelogo.png">
 			</a>
 			</div>
 			<div id="header-account">
@@ -45,10 +45,10 @@
 				
 				{% if not user %}
 				<a href="/login">
-				<button id="login-button" class="hdrbtn" value="login" type="button"> Login </button>
+				<button id="login-button" class="button" value="login" type="button"> Login </button>
 				</a>
 				<a href="/sign-up">
-				<button id="register-button" class="hdrbtn" value="register" type="button"> Sign-Up </button>
+				<button id="register-button" class="button" value="register" type="button"> Sign-Up </button>
 				</a>
 				{% endif %}
 			</div>
@@ -59,6 +59,7 @@
 				<li class="header-link"><a href="/recruit/">Post em Job</a></li>
 				<li class="header-link"><a href="/search/resumes">Find der Werker</a></li>
 			</ul>
+	 </div>
 	 </div>
 	 
 	 <div id ="content-wrapper">
@@ -80,7 +81,7 @@
 	<p class="copyright">
 	Copyright &copy;2014 Jason Clark. All rights reserved.
 	<a href="https://github.com/mithereal/resumeretard">
-	<img width="24" height="15" valign="bottom" src="/static/sitelogo.png">
+	<img width="24" height="15" valign="bottom" src="/static/image/sitelogo.png">
 	</a>
 	</p>
 
