--- a/priv/static/css/app.css
+++ b/priv/static/css/app.css
@@ -8,12 +8,11 @@ position:absolute;
 bottom:0px;
 width:100%;
 }
-a{
-color:#F9F2F2;
-text-decoration:none;
-cursor:  url(/static/cursor/pointer.ani),  url(/static/cursor/pointer.cur), auto;
+#site-header{
+border-bottom: 1px solid #CCCCCC;
+margin-bottom:2px;
 }
-visited{
+a{
 color:#F9F2F2;
 text-decoration:none;
 cursor:  url(/static/cursor/pointer.ani),  url(/static/cursor/pointer.cur), auto;
@@ -23,6 +22,12 @@ color:#FFB776;
 font-size:115;
 cursor:  url(/static/cursor/pointer.ani),  url(/static/cursor/pointer.cur), auto;
 }
+visited{
+color:#F9F2F2;
+text-decoration:none;
+cursor:  url(/static/cursor/pointer.ani),  url(/static/cursor/pointer.cur), auto;
+}
+
 .site-links {
 margin: auto;
 padding-top: 10px;
@@ -30,15 +35,7 @@ padding-top: 10px;
 .site-links li {
 display: inline;
 }
-#site-header{
-border-bottom: 1px solid #CCCCCC;
-margin-bottom:2px;
-}
-#header-account{
-position:absolute; 
-right: 10px;
-top:10px;
-}
+
 .header-links{
 position: absolute;
 right: 15em;
@@ -62,15 +59,8 @@ background-color:#2FB62F;
 }
 .header-link a{
 text-decoration: none;
-font-size:150%;
+#font-size:150%;
 color:#FFFFFF;
-}
-#content-wrapper{
-color:#F5F5F5;
-position:absolute;
-min-width:100%;
-min-height:80%;
-background-color:#2855A2;
 }
 .copyright{
 color:#FF0000;
@@ -79,7 +69,7 @@ bottom:0ex;
 right: 15px;
 }
 
-.hdrbtn{
+.button{
 border:1px solid #f2b400; -webkit-border-radius: 3px; -moz-border-radius: 3px;border-radius: 3px;font-size:12px;font-family:arial, helvetica, sans-serif; padding: 10px 10px 10px 10px; text-decoration:none; display:inline-block;text-shadow: -1px -1px 0 rgba(0,0,0,0.3);font-weight:bold; color: #FFFFFF;
 background-color: #FFC92B; background-image: -webkit-gradient(linear, left top, left bottom, from(#FFC92B), to(#AD9D68));
 background-image: -webkit-linear-gradient(top, #FFC92B, #AD9D68);
@@ -90,7 +80,7 @@ background-image: linear-gradient(to bottom, #FFC92B, #AD9D68);
 filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#FFC92B, endColorstr=#AD9D68);
 }
 
-.hdrbtn:hover{
+.button:hover{
 border:1px solid #c49200;
 background-color: #FFD65E; background-image: -webkit-gradient(linear, left top, left bottom, from(#FFD65E), to(#E62E2E));
 background-image: -webkit-linear-gradient(top, #FFD65E, #E62E2E);
@@ -102,6 +92,81 @@ filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#
 }
 .selected{
 background-color:#2FB62F;
+}
+.card {
+    background:#FFF;
+    border:1px solid #AAA;
+    border-bottom:3px solid #BBB;
+    padding:0px;
+    margin:15px;
+    overflow:hidden;
+}
+
+.card h1 {
+    margin:0px;
+    padding:10px;
+    padding-bottom:0px;
+}
+
+.card p {
+    margin:0px;
+    padding:10px;
+}
+
+.card-image {
+    width:100%;
+    height:200px;
+    padding:0px;
+    margin:0px;
+    background-position:center;
+    background-repeat:no-repeat;
+    position:relative;
+    overflow:hidden;
+}
+
+.card-image .banner {
+    height:50px;
+    width:50px;
+    top:0px;
+    right:0px;
+    background-position:top right;
+    background-repeat:no-repeat;
+    background-image:url('static/image/new.png');
+    position:absolute;
+}
+
+.card-image h1, 
+.card-image h2, 
+.card-image h3, 
+.card-image h4, 
+.card-image h5, 
+.card-image h6 {
+    position:absolute;
+    bottom:0px;
+    width:100%;
+    color:white;
+    background:rgba(0,0,0,0.65);
+    margin:0px;
+    padding:6px;
+    border:none;
+}
+.infobox{
+	float:right;
+	width:35%;
+	margin-right:8em;
+	margin-top:2em;
+}
+#header-account{
+position:absolute; 
+right: 10px;
+top:10px;
+}
+#content-wrapper{
+color:#F5F5F5;
+position:absolute;
+width:100%;
+min-height:80%;
+background-color:#2855A2;
 }
 #sitelogo{
 padding-top: 0.5em;
@@ -126,4 +191,13 @@ right:15px;
 top:15px;
 text-align:right;
 width:20%;
+}
+#registerform{
+text-align:left;
+	list-style-type: none;
+	margin-left:3em;
+	width:250px;
+}
+#registersubmit{
+	margin-left: 10em;
 }
