--- a/src/view/registration/index.html
+++ b/src/view/registration/index.html
@@ -4,5 +4,41 @@
  {{ message }}
 </div>
 <div cladd="pagename"> {{ pagename }} </div>
-<div class ="registerationblock"></div>
+<div class ="registerationblock">
+<form method="post" action="/register">
+		<div class="infobox">
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed doeiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enimad minim veniam, quis nostrud exercitation ullamco laboris nisi utaliquip ex ea commodo consequat. Duis aute irure dolor inreprehenderit in voluptate velit esse cillum dolore eu fugiat nullapariatur. Excepteur sint occaecat cupidatat non proident, sunt inculpa qui offi
+		</div>
+	<ul id="registerform">
+	<li>
+<label for="firstname">First Name<label>
+<input name="firstname" />
+	</li>
+	<li>
+<label for="firstname">Last Name<label>
+<input name="lastname" />
+	</li>
+	<li>
+<label for="email">Email Address<label>
+<input name="email" />
+	</li>
+	<li>
+<label for="email">Password<label>
+<input name="password" type="password" />
+	</li>
+	<li>
+<label for="email">Password Confirmation<label>
+<input name="passwordconfirm" type="password" />
+	</li>
+	<li>
+<label for="email">Zip Code<label>
+<input name="zipcode" />
+	</li>
+	</ul>
+
+
+<button id="registersubmit" class="button">Sign Up</button>
+
+</form>
+</div>
 {% endblock %}
