--- a/src/view/search/jobs.html
+++ b/src/view/search/jobs.html
@@ -12,7 +12,7 @@
 {% for job in jobs %}
 <div class="jobsquare">
 <div class="jobsearchthumb"><img src="{{ job.logo }}"></div>
-<div class="jobsearchname">{{ job.name }}</div>
+<div class="jobsearchname">{{ job.title }}</div>
 <div class="jobsearchdescription">{{ job.shortdescription }}</div>
 <div class="jobsearchmisc">{{ job.payrate }}</div>
 </div>
