--- a/src/view/app.html
+++ b/src/view/app.html
@@ -10,6 +10,7 @@
 	
 	<meta http-equiv="Content-Style-Type" content="text/css" />
 	<meta http-equiv="Content-Script-Type" content="text/javascript"/>
+	<script type="text/javascript" src="/static/js/geo.js"></script>
 	
 	<meta property="fb:page_id" content="page_id will go here" />
 			
@@ -60,6 +61,12 @@
 				<li class="header-link"><a href="/search/resumes">Find der Werker</a></li>
 			</ul>
 	 </div>
+	 	 <div id="search">
+		 <form method="post" action="">
+		   <input type="text" id="searchinput" name="searchjobs" placeholder="Search for a job near you"/>
+	       <button class="button">Search</button>
+	    </form>
+	   </div>
 	 </div>
 	 
 	 <div id ="content-wrapper">
@@ -89,6 +96,6 @@
    <script src="/static/js/app.js"></script>
    <script src="/static/js/controllers.js"></script>
    <script src="/static/js/directives.js"></script>
-    
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
   </body>
 </html>
