--- a/src/view/main/index.html
+++ b/src/view/main/index.html
@@ -3,5 +3,23 @@
 <div class="error">
  {{ message }}
 </div>
+
 <article></article>
+<div id="newestjobsblock">
+<div>Newest Jobs</div>
+{% for newjob in newjobs %}
+<div>
+	{{ newjob.title }}
+	{{ newjob.company.name }}
+</div>
+{% endfor %}
+</div>
+<div id="searchcloud">
+	Popular Job Searches
+	{% for search in searches %}
+	{{ search.term }}
+	{% endfor %}
+</div>
+<script type="text/javascript" src="/static/js/geo.js"></script>
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"&callback="initialize"></script>
 {% endblock %}
