--- a/src/view/main/index.html
+++ b/src/view/main/index.html
@@ -10,16 +10,24 @@
 {% for newjob in newjobs %}
 <div>
 	{{ newjob.title }}
+	{{ newjob.created }}
+	{{ newjob.location }}
+	{{ newjob.subtitle }}
 	{{ newjob.company.name }}
+	{{ newjob.company.logo }}
 </div>
 {% endfor %}
 </div>
-<div id="searchcloud">
-	Popular Job Searches
-	{% for search in searches %}
-	{{ search.term }}
-	{% endfor %}
+<div id="dynacloud">
+Popular Job Searches
+{% for search in searches %}
+<div class="dynacloud">
+{{ search.term }}
+</div>
+{% endfor %}
+
 </div>
 <script type="text/javascript" src="/static/js/geo.js"></script>
+<script type="text/javascript" src="/static/js/dynacloud.js"></script>
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"&callback="initialize"></script>
 {% endblock %}
