added recruit views

--- a/src/view/main/index.html
+++ b/src/view/main/index.html
@@ -19,7 +19,7 @@
 {% endfor %}
 </div>
 <div id="dynacloud">
-Popular Job Searches
+Employers are searching for
 {% for search in searches %}
 <div class="dynacloud">
 {{ search.term }}
