--- a/src/view/recruit/index.html
+++ b/src/view/recruit/index.html
@@ -3,5 +3,13 @@
 <div class="error">
  {{ message }}
 </div>
-recruit index content goes here
+<h1>Recruit an employee</h1> 
+<div>
+	Recruit a qualified candidate.
+	</div>
+	<div>
+		Sign up as an employer 
+		now!
+		</div>
+		<div><a href="/recruit/career">Start the hiring process</a></div>
 {% endblock %}
