--- a/src/view/app.html
+++ b/src/view/app.html
@@ -61,7 +61,7 @@
 				<li class="header-link"><a href="/search/resumes">Find der Werker</a></li>
 			</ul>
 			<div id="">
-			<ul>
+			<ul id="header-footer">
 				<li>
 					Home
 				</li>
