--- a/src/view/recruit/career.html
+++ b/src/view/recruit/career.html
@@ -4,7 +4,7 @@
  {{ message }}
 </div>
 <h1>Recruit Wizard</h1> 
-<div>
+<div class="heading">
 	Enter the details about the job offering.
 </div>
 <div>
@@ -16,7 +16,7 @@
 			</li>
 			<li>
 			<label>Job Subtitle</label>
-			<input type="text" name"jobsubtitle" id="jobsubtitle"/>
+			<input type="text" name="jobsubtitle" id="jobsubtitle"/>
 			</li>
 			<li>
 			<label>Job needs to be filled by</label>
