--- a/src/view/recruit/index.html
+++ b/src/view/recruit/index.html
@@ -8,7 +8,7 @@
 	Recruit a qualified candidate.
 	</div>
 	<div>
-		Sign up as an employer 
+		<a href="/signup">Sign up as an employer 
 		now!
 		</div>
 		<div><a href="/recruit/career">Start the hiring process</a></div>
