--- a/src/view/search/jobs.html
+++ b/src/view/search/jobs.html
@@ -8,13 +8,13 @@
 <div class="pagename">
 	{{ page.name }}
 </div>
-{{ Jobs }}
+
 {% for job in jobs %}
-<div class="jobsquare">
-<div class="jobsearchthumb"><img src="{{ job.logo }}"></div>
-<div class="jobsearchname">{{ job.title }}</div>
-<div class="jobsearchdescription">{{ job.shortdescription }}</div>
-<div class="jobsearchmisc">{{ job.payrate }}</div>
+<div id="jobsquare" class="card">
+<div id="jobsearchthumb"><img src="{{ job.logo }}"></div>
+<div id="jobsearchname">{{ job.title }}</div>
+<div id="jobsearchdescription">{{ job.shortdescription }}</div>
+<div id="jobsearchmisc">{{ job.payrate }}</div>
 </div>
 
 {% endfor %}
