--- a/src/view/user/login.html
+++ b/src/view/user/login.html
@@ -4,14 +4,22 @@
 <font color="red">{{ error }}</font>
 {% endif %}
 <div id="loginblock">
-<form method="post" action="/login">
-Name<br />
-<input name="username" /><br /><br />
+<form method="post" action="">
 
-Password<br />
-<input name="password" type="password" /><br /><br />
+<ol id="loginform">	
+<li>
+<label>Name</label>
+<input name="username" />
+</li>
 
+<li>
+<label>Password</label>
+<input name="password" type="password" />
+</li>
+<li>
 <button id="registersubmit" class="button">Log in</button>
+</li>
+</ol>
 
 </form>
 </div>
