--- a/src/view/main/index.html
+++ b/src/view/main/index.html
@@ -4,7 +4,7 @@
  {{ message }}
 </div>
 
-<article></article>
+<article id="jobsmap"></article>
 <div id="newestjobsblock">
 <div>Newest Jobs</div>
 {% for newjob in newjobs %}
