--- a/priv/static/css/app.css
+++ b/priv/static/css/app.css
@@ -6,7 +6,7 @@ cursor:  url(/static/cursor/pointer.ani),  url(/static/cursor/pointer.cur), auto
 footer{
 position:absolute;
 bottom:0px;
-width:100%;
+width:90%;
 }
 #site-header{
 border-bottom: 1px solid #CCCCCC;
@@ -94,45 +94,45 @@ filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#
 background-color:#2FB62F;
 }
 .card {
-    background:#FFF;
-    border:1px solid #AAA;
-    border-bottom:3px solid #BBB;
-    padding:0px;
-    margin:15px;
-    overflow:hidden;
+background:#FFF;
+border:1px solid #AAA;
+border-bottom:3px solid #BBB;
+padding:0px;
+margin:15px;
+overflow:hidden;
 }
 
 .card h1 {
-    margin:0px;
-    padding:10px;
-    padding-bottom:0px;
+margin:0px;
+padding:10px;
+padding-bottom:0px;
 }
 
 .card p {
-    margin:0px;
-    padding:10px;
+margin:0px;
+padding:10px;
 }
 
 .card-image {
-    width:100%;
-    height:200px;
-    padding:0px;
-    margin:0px;
-    background-position:center;
-    background-repeat:no-repeat;
-    position:relative;
-    overflow:hidden;
+width:100%;
+height:200px;
+padding:0px;
+margin:0px;
+background-position:center;
+background-repeat:no-repeat;
+position:relative;
+overflow:hidden;
 }
 
 .card-image .banner {
-    height:50px;
-    width:50px;
-    top:0px;
-    right:0px;
-    background-position:top right;
-    background-repeat:no-repeat;
-    background-image:url('static/image/new.png');
-    position:absolute;
+height:50px;
+width:50px;
+top:0px;
+right:0px;
+background-position:top right;
+background-repeat:no-repeat;
+background-image:url('static/image/new.png');
+position:absolute;
 }
 
 .card-image h1, 
@@ -141,20 +141,20 @@ background-color:#2FB62F;
 .card-image h4, 
 .card-image h5, 
 .card-image h6 {
-    position:absolute;
-    bottom:0px;
-    width:100%;
-    color:white;
-    background:rgba(0,0,0,0.65);
-    margin:0px;
-    padding:6px;
-    border:none;
+position:absolute;
+bottom:0px;
+width:100%;
+color:white;
+background:rgba(0,0,0,0.65);
+margin:0px;
+padding:6px;
+border:none;
 }
 .infobox{
-	float:right;
-	width:35%;
-	margin-right:8em;
-	margin-top:2em;
+float:right;
+width:35%;
+margin-right:8em;
+margin-top:2em;
 }
 #header-account{
 position:absolute; 
@@ -163,7 +163,7 @@ top:10px;
 }
 #content-wrapper{
 color:#F5F5F5;
-position:absolute;
+position:relative;
 width:100%;
 min-height:80%;
 background-color:#2855A2;
@@ -194,49 +194,77 @@ width:20%;
 }
 #registerform{
 text-align:left;
-	list-style-type: none;
-	margin-left:9em;
-	width:250px;
+list-style-type: none;
+margin-left:9em;
+width:250px;
 }
 #registersubmit{
 margin-right:0.2em;
 }
 #search{
-	position:absolute;
-	left:16em;
-	z-index:3;
-	padding-top:1em;
-	margin-bottom:1em;
+position:relative;
+margin-left:16em;
+z-index:3;
+padding-top:1em;
+margin-bottom:1dynacloudem;
 }
 #searchinput{
-	width:30em;
+width:30em;
 }
 .search{
-	height:1.5em;
+height:1.5em;
 }
-#leftmapcontainer{ 
+#mapcontainer{ 
 margin:1em;
 height:200px;
 width:200px;
 display:inline-block;
 }
-#rightmapcontainer{ 
-margin:1em;
-height:200px;
-width:200px;
-display:inline-block;
-}
+
 #newestjobsblock{
-	margin-left:1em;
-	max-width:40%;
+margin-left:1em;
+max-width:40%;
 }
 #dynacloud{
-	height:200px;
-	width:200px;
-	float:right;
+height:200px;
+width:200px;
+display:inline-block;
+margin-left:1em;
 }
 #jobsmap{
-margin-top:3em;
 margin-left:8em;
-
+max-width:40%;
+display:inline-block;
+}
+#header-nav a{
+font-size:120%;
+color:#2855A2;
+}
+#header-nav{
+width:100%;
+height:2em;
+position:relative;
+z-index:5;
+border:1px solid #f2b400; -webkit-border-radius: 3px; -moz-border-radius: 3px;border-radius: 3px;font-size:12px;font-family:arial, helvetica, sans-serif; 
+text-decoration:none; 
+display:inline-block;
+text-shadow: -1px -1px 0 rgba(0,0,0,0.3);
+font-weight:bold; 
+color: #FFFFFF;
+background-color: #FFC92B; 
+background-image: -webkit-gradient(linear, left top, left bottom, from(#FFC92B), to(#AD9D68));
+background-image: -webkit-linear-gradient(top, #FFC92B, #AD9D68);
+background-image: -moz-linear-gradient(top, #FFC92B, #AD9D68);
+background-image: -ms-linear-gradient(top, #FFC92B, #AD9D68);
+background-image: -o-linear-gradient(top, #FFC92B, #AD9D68);
+background-image: linear-gradient(to bottom, #FFC92B, #AD9D68);
+filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#FFC92B, endColorstr=#AD9D68);
+}
+#searchbutton{
+	position:absolute;
+	right:26.4em;
+}
+#searchbox{
+	position:relative;
+	margin:auto;
 }
