--- a/src/view/app.html
+++ b/src/view/app.html
@@ -11,7 +11,6 @@
 	<meta http-equiv="Content-Style-Type" content="text/css" />
 	<meta http-equiv="Content-Script-Type" content="text/javascript"/>
 	
-	
 	<meta property="fb:page_id" content="page_id will go here" />
 			
 	<link media="all" rel="stylesheet" type="text/css" href="/static/css/app.css" />
@@ -23,10 +22,9 @@
     </style>
     <![endif]-->	
 	
-	
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js" type="text/javascript"></script>
+	<script src="/static/js/jquery-1.11.1.min.js" type="text/javascript"></script>
+	<script src="/static/js/angular.min.js" type="text/javascript"></script>
    
-	
     <title>Resume Retard - an Erlang Job Bank</title>
 
   </head>
@@ -60,28 +58,18 @@
 				<li class="header-link"><a href="/recruit/">Post em Job</a></li>
 				<li class="header-link"><a href="/search/resumes">Find der Werker</a></li>
 			</ul>
-			<div id="">
-			<ul id="header-footer">
-				<li>
-					Home
-				</li>
-			</ul>
+	 </div>
+	<div id="header-nav">
+			<nav>
+				<a href="/html/">Home</a> |
+			</nav>
 			</div>
-	 </div>
-	 	 <div id="search">
-		 <form method="post" action="">
-		   <input type="text" id="searchinput" name="searchjobs" class="search" placeholder="Search for a job near you"/>
-		   <input type="text" id="searchlocation" name="searchlocation" class="search" placeholder="Tucson AZ"/>
-	       <button class="button">Search</button>
-	    </form>
-	   </div>
-	 </div>
 	 
-	 <div id ="content-wrapper">
-	<div id="lgutter"></div> 
+	 <section id ="content-wrapper">
+	<article id="lgutter"></article> 
     {% block content %}{% endblock %}
-    <div id="rgutter"></div>
-    </div>
+    <article id="rgutter"></article>
+    </section>
 
   <footer>
 	  <div class="site-links">
@@ -94,12 +82,12 @@
 			</ul>
 	</div>
 	
-	<p class="copyright">
+	<article class="copyright">
 	Copyright &copy;2014 Jason Clark. All rights reserved.
 	<a href="https://github.com/mithereal/resumeretard">
 	<img width="24" height="15" valign="bottom" src="/static/image/sitelogo.png">
 	</a>
-	</p>
+	</article>
 
   </footer>
    <script src="/static/js/app.js"></script>
