--- a/src/view/main/index.html
+++ b/src/view/main/index.html
@@ -4,8 +4,31 @@
  {{ message }}
 </div>
 
+<div id="search">
+	<div id="searchbox">
+		 <form method="post" action="">
+		   <input type="text" id="searchinput" name="searchjobs" class="search" placeholder="Search for a job near you"/>
+		   <input type="text" id="searchlocation" name="searchlocation" class="search" placeholder="Tucson AZ"/>
+	       <div>
+	       <select name="category"> 
+	       <option>Select a job Category</option>
+	       </select>
+	       <button id="searchbutton" class="button">Search</button>
+	       </div>
+	    </form>
+	   </div>
+  </div>
+ 
 <article id="jobsmap"></article>
-<div id="newestjobsblock">
+<article id="dynacloud">
+Employers are searching for
+{% for search in searches %}
+<div class="dynacloud">
+{{ search.term }}
+</div>
+{% endfor %}
+</article>
+<aritcle id="newestjobsblock">
 <div>Newest Jobs</div>
 {% for newjob in newjobs %}
 <div>
@@ -17,16 +40,8 @@
 	{{ newjob.company.name }}
 </div>
 {% endfor %}
-</div>
-<div id="dynacloud">
-Employers are searching for
-{% for search in searches %}
-<div class="dynacloud">
-{{ search.term }}
-</div>
-{% endfor %}
+</aritcle>
 
-</div>
 <script type="text/javascript" src="/static/js/geo.js"></script>
 <script type="text/javascript" src="/static/js/dynacloud.js"></script>
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"&callback="initialize"></script>
