--- a/priv/static/css/app.css
+++ b/priv/static/css/app.css
@@ -6,11 +6,11 @@ cursor:  url(/static/cursor/pointer.ani),  url(/static/cursor/pointer.cur), auto
 footer{
 position:absolute;
 bottom:0px;
-width:90%;
+width:99%;
 }
 #site-header{
-border-bottom: 1px solid #CCCCCC;
-margin-bottom:2px;
+
+
 }
 a{
 color:#F9F2F2;
@@ -65,7 +65,7 @@ color:#FFFFFF;
 .copyright{
 color:#FF0000;
 position:absolute;
-bottom:0ex; 
+bottom:1em; 
 right: 15px;
 }
 
@@ -168,7 +168,10 @@ width:100%;
 min-height:80%;
 background-color:#2855A2;
 }
+
 #sitelogo{
+height:80px; 
+width:110px;
 padding-top: 0.5em;
 }
 #versioninfo{
@@ -242,12 +245,12 @@ color:#2855A2;
 }
 #header-nav{
 width:100%;
-height:2em;
+height:3em;
 position:relative;
 z-index:5;
 border:1px solid #f2b400; -webkit-border-radius: 3px; -moz-border-radius: 3px;border-radius: 3px;font-size:12px;font-family:arial, helvetica, sans-serif; 
 text-decoration:none; 
-display:inline-block;
+
 text-shadow: -1px -1px 0 rgba(0,0,0,0.3);
 font-weight:bold; 
 color: #FFFFFF;
