--- a/priv/static/css/app.css
+++ b/priv/static/css/app.css
@@ -271,3 +271,6 @@ filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#
 	position:relative;
 	margin:auto;
 }
+#loginform{
+	list-style-type: none;
+}
