--- a/src/view/recruit/career.html
+++ b/src/view/recruit/career.html
@@ -23,6 +23,14 @@
 			<input type="text" name="jobexpires" id="jobexpires" />
 			</li>
 			<li>
+			<label>Job Compensation</label>
+			<input type="text" name="jobexpires" id="jobexpires" />
+			</li>
+			<li>
+			<label>Job Duration</label>
+			<input type="text" name="jobexpires" id="jobexpires" />
+			</li>
+			<li>
 			<label>Job Description</label>
 			<textarea name="jobdescription" id="jobdescription"></textarea>
 			</li>
@@ -39,6 +47,9 @@
 			</li>
 			<li>
 			<label>Job Location</label>
+			</li>
+			<li>
+			<label>Job Keywords</label>
 			</li>
 		</ol>
 	</form>
