--- a/src/view/registration/index.html
+++ b/src/view/registration/index.html
@@ -11,37 +11,59 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed doeiusmod tempor i
 </div>
 <ul id="registerform">
 <li>
-<label for="firstname">First Name<label>
+<label for="firstname">First Name</label>
 <input name="firstname" />
 </li>
 <li>
-<label for="firstname">Last Name<label>
+<label for="firstname">Last Name</label>
 <input name="lastname" />
 </li>
 <li>
-<label for="email">Email Address<label>
+<label for="email">Email Address</label>
 <input name="email" />
 </li>
 <li>
-<label for="email">Password<label>
+<label for="password">Password</label>
 <input name="password" type="password" />
 </li>
 <li>
-<label for="email">Password Confirmation<label>
+<label for="password_confirnation">Password Confirmation</label>
 <input name="passwordconfirm" type="password" />
 </li>
 <li>
-<label for="email">Zip Code<label>
+<label for="zipcode">Zip Code</label>
 <input name="zipcode" />
 </li>
 <li>
-<label for="employer">I am an Employer<label>
+<label for="city">City</label>
+<select name="city">
+<option></option>
+</select>
+</li>
+<li>
+<label for="state">State</label>
+<select name="state">
+<option></option>
+</select>
+</li>
+<li>
+<label for="country">Country</label>
+<select name="country">
+<option></option>
+</select>
+</li>
+<li>
+<label for="employer">I am a Employer</label>
 <input name="employerchk" type="checkbox"/>
+</li>
+<li>
+<label for="recruiter">I am a Recruiter</label>
+<input name="agentchk" type="checkbox"/>
 </li>
 </ul>
 
 
-<button id="registersubmit" class="button">Sign Up</button>
+<button id="submit" class="button">Sign Up</button>
 
 </form>
 </div>
