--- a/src/view/search/jobs.html
+++ b/src/view/search/jobs.html
@@ -14,7 +14,7 @@
 <div id="jobsearchthumb"><img src="{{ job.logo }}"></div>
 <div id="jobsearchname">{{ job.title }}</div>
 <div id="jobsearchdescription">{{ job.shortdescription }}</div>
-<div id="jobsearchmisc">{{ job.payrate }}</div>
+<div id="jobsearchmisc">{{ job.compensation }}</div>
 </div>
 
 {% endfor %}
