--- a/src/view/user/login.html
+++ b/src/view/user/login.html
@@ -9,15 +9,15 @@
 <ol id="loginform">	
 <li>
 <label>Name</label>
-<input name="username" />
+<input name="username" id="username"/>
 </li>
 
 <li>
 <label>Password</label>
-<input name="password" type="password" />
+<input name="password" type="password" id="password"/>
 </li>
 <li>
-<button id="registersubmit" class="button">Log in</button>
+<button id="submit" class="button">Log in</button>
 </li>
 </ol>
 
