worked on methods

--- a/src/view/user/login.html
+++ b/src/view/user/login.html
@@ -4,7 +4,7 @@
 <font color="red">{{ error }}</font>
 {% endif %}
 <div id="loginblock">
-<form method="post" action="">
+<form method="post" action="login">
 
 <ol id="loginform">	
 <li>
