--- a/src/view/app.html
+++ b/src/view/app.html
@@ -84,7 +84,7 @@
 	
 <section id="lgutter">
 	
-<section id="categories">
+<section id="categories" class="infoblock">
 Categories
 {% for category in categories %}
 <div class="category">
@@ -93,18 +93,18 @@ Categories
 {% endfor %}
 </section>
 
-<section id="filter">
+<section id="filter" class="infoblock">
 Sort By :
 
 <b>relevance</b>
 -
 <b>date</b>
 
-<div class="distance">
+<div class="distance" class="infoblock">
 
 </div>
 
-<div class="salary">
+<div class="salary" class="infoblock">
 
 </div>
 
@@ -116,7 +116,7 @@ Sort By :
 
 <section id="rgutter">
 	
-<section id="dynacloud">
+<section id="dynacloud" class="infoblock">
 Employers are searching for
 {% for esearch in esearches %}
 <div class="dynacloud">
@@ -125,7 +125,7 @@ Employers are searching for
 {% endfor %}
 </section>
 
-<section id="recentsearch">
+<section id="recentsearch" class="infoblock">
 My Recent Searches
 {% for search in searches %}
 <div class="recentsearch">
